# code-in-blogposts

./: .gitignore  LICENCE  readme.md
batch_bo/: .gitignore  basic_example.py  batch_ts.py  constants.py  dataset.py  expected_improvement.py  fitting_on_initial_design.py  gpbucb.py  guiding_example.py  initial_design.py  models.py  objective_function.py  plotting.py  pyproject.toml  q_ei.py  requirements.txt  sequential_vanilla_bo.py  training.py
batch_bo_clean/: .gitignore  Makefile  pyproject.toml
batch_bo_clean/src/batch_bo/: __init__.py
batch_bo_clean/src/batch_bo/dataset/: dataset.py
batch_bo_clean/src/batch_bo/examples/: __init__.py  batch_ts.py  gpbucb.py  plot_initial_figure.py  plot_initial_fit.py  sequential_vanilla_bo.py  sequential_vanilla_bo_ts.py  study_sensitivity_to_y.py  ts_using_gpjax.py
batch_bo_clean/src/batch_bo/fitting/: __init__.py  gp.py
batch_bo_clean/src/batch_bo/functions/: objective_function.py
batch_bo_clean/src/batch_bo/initial_design/: sobol.py
batch_bo_clean/src/batch_bo/models/: __init__.py  gp.py
batch_bo_clean/src/batch_bo/plotting/: __init__.py  plotting.py
batch_bo_clean/src/batch_bo/utils/: constants.py
hive-partitioning-example/: README.md  analysis.py  main.py  pyproject.toml  synthetic_csv.py  synthetic_pydantic.py
hive-partitioning-example/results/protein=9L76/molecule=mol1/seed=0/: results.csv  results.json
hive-partitioning-example/results/protein=9L76/molecule=mol1/seed=1/: results.csv  results.json
hive-partitioning-example/results/protein=9L76/molecule=mol1/seed=2/: results.csv  results.json
(+420 files in other folders)
