[project]
name = "batch-bo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Miguel González Duque", email = "miguelgondu@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "botorch>=0.13.0",
    "gpjax>=0.9.4",
    "gpytorch>=1.14",
    "matplotlib>=3.10.1",
    "poli-core>=1.2.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
